c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/tag_resolution/member_name_wrong_scope.c
struct s {
    int a;
};

int main(void) {
    struct s foo = {1};

    // introduce a different struct s type
    struct s {
        int b;
    };

    return foo.b; // foo belongs to outer struct s type, which doesn't have member 'b'
}